-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.2
-
None
-
-
da0587c43a (qt/qtbase/dev) da0587c43a (qt/tqtc-qtbase/dev) afd88fba7d (qt/qtbase/6.4) afd88fba7d (qt/tqtc-qtbase/6.4)
One more unhandled WinRT exception
KERNELBASE.dll!RaiseException() Unknown VCRUNTIME140.dll!_CxxThrowException(void * pExceptionObject, const _s__ThrowInfo * pThrowInfo) Line 75 C++ qnetworklistmanager.dll!winrt::throw_hresult(const winrt::hresult result) Line 4783 C++ [Inline Frame] qnetworklistmanager.dll!winrt::check_hresult(const winrt::hresult) Line 4828 C++ [Inline Frame] qnetworklistmanager.dll!winrt::impl::consume_Windows_Networking_Connectivity_INetworkInformationStatics<winrt::Windows::Networking::Connectivity::INetworkInformationStatics>::GetInternetConnectionProfile() Line 556 C++ [Inline Frame] qnetworklistmanager.dll!winrt::Windows::Networking::Connectivity::NetworkInformation::GetInternetConnectionProfile::__l2::<lambda_3dbfe9da8b0db60d975c7a909fdd7f97>::operator()(const winrt::Windows::Networking::Connectivity::INetworkInformationStatics &) Line 2148 C++ [Inline Frame] qnetworklistmanager.dll!winrt::impl::call_factory_cast(winrt::Windows::Networking::Connectivity::NetworkInformation::GetInternetConnectionProfile::__l2::<lambda_3dbfe9da8b0db60d975c7a909fdd7f97> &&) Line 6122 C++ [Inline Frame] qnetworklistmanager.dll!winrt::Windows::Networking::Connectivity::NetworkInformation::GetInternetConnectionProfile() Line 2148 C++ > qnetworklistmanager.dll!QNetworkListManagerEvents::emitWinRTUpdates() Line 281 C++ qnetworklistmanager.dll!QNetworkListManagerEvents::start() Line 159 C++ qnetworklistmanager.dll!QNetworkListManagerNetworkInformationBackend::start() Line 228 C++ qnetworklistmanager.dll!QNetworkListManagerNetworkInformationBackendFactory::create(QFlags<enum QNetworkInformation::Feature> requiredFeatures) Line 149 C++ Qt6Network.dll!QNetworkInformationPrivate::create(QFlags<enum QNetworkInformation::Feature> features) Line 293 C++ Qt6Network.dll!QNetworkInformation::load(QFlags<enum QNetworkInformation::Feature> features) Line 710 C++
void QNetworkListManagerEvents::emitWinRTUpdates() { using namespace winrt::Windows::Networking::Connectivity; ConnectionProfile profile = NetworkInformation::GetInternetConnectionProfile(); <--HERE if (profile == nullptr) return; emit transportMediumChanged(getTransportMedium(profile)); emit isMeteredChanged(getMetered(profile)); }
- relates to
-
QTBUG-108156 Unhandled exception on QNetworkInformation::load()
-
- Closed
-
-
QTBUG-108605 Unhandled WinRT exception at QSystemLocalePrivate::uiLanguages()
-
- Closed
-
-
QTBUG-110408 [Win] Yet another unhandled exception on QNetworkInformation::load()
-
- Closed
-